Uitwerking van de exercise

--- a/index.html
+++ b/index.html
@@ -3,14 +3,17 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Click me!</title>
+    <title>geef me een kleur</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body id="body">
-    <h1>verander de achtergrond kleur!</h1>
+    <h1>Verander de achtergrond kleur!</h1>
 
-    <button onclick="backGround()">click me!</button>
+    <div>
+        <input type="color" id="color">
+        <button onclick="color()">Click me!</button>
+    </div>
 
 </body>
 
